# breezybox-cardputer

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md
breezybox-cardputer/: .component_hash  CHECKSUMS.json  CMakeLists.txt  breezy_exec.c  breezy_http.c  breezy_pager.c  breezy_vfs.c  breezy_wrap.c  breezybox.c  idf_component.yml
breezybox-cardputer/apps/vi/: buildelf.sh  vi.c
breezybox-cardputer/cmd/: cat.c  df.c  ls.c  lua.c  more.c  ping.c  shell_extra.c  sleep.c  ssh.c  wifi.c
breezybox-cardputer/include/: breezy_cmd.h  breezy_pager.h  breezy_vfs.h  breezybox.h
breezybox-firmware/: CMakeLists.txt  Makefile  partitions.csv  partitions.launcher.8mb.csv  partitions.m5stickc.csv  sdkconfig.defaults  sdkconfig.defaults.cardputer  sdkconfig.defaults.sticks3
breezybox-firmware/components/espressif__elf_loader/: .component_hash  CHECKSUMS.json  Kconfig  idf_component.yml
breezybox-firmware/components/espressif__elf_loader/src/: esp_all_symbol.c  esp_elf.c
breezybox-firmware/components/libssh_esp32/: CMakeLists.txt
breezybox-firmware/components/libssh_esp32/src/libssh/: poll.h
breezybox-firmware/components/valdanylchuk__breezy_rgb_lcd/: .component_hash  CHECKSUMS.json  CMakeLists.txt  idf_component.yml  rgb_display.c  rgb_gfx.c
breezybox-firmware/components/valdanylchuk__breezy_rgb_lcd/include/: rgb_display.h  rgb_gfx.h
breezybox-firmware/components/valdanylchuk__breezy_term/: .component_hash  CHECKSUMS.json  idf_component.yml  vterm.c
breezybox-firmware/components/valdanylchuk__breezy_term/include/: vterm.h
breezybox-firmware/fs_image/lua/: GUIDE.txt  args.lua  battery_demo.lua  config_demo.lua  graphics_demo.lua  graphics_text_demo.lua  hardware_info.lua  hello.lua  http_demo.lua  i2c_scan.lua  i2s_demo.lua  keyboard_demo.lua  list_root.lua  sound_demo.lua  spi_demo.lua  sprite_demo.lua  sysinfo.lua  template.lua  tui_demo.lua  uart_demo.lua  web_get_example.lua  web_post_example.lua  write_demo.lua
breezybox-firmware/main/: CMakeLists.txt  board_cardputer.c  board_m5stickc.c  board_runtime.h  cardputer_keyboard.c  cardputer_keyboard.h  cmd_app_compat.c  cmd_gunzip_builtin.c  cmd_gzip_builtin.c  cmd_plasma_builtin.c  cmd_termbench_builtin.c  cmd_testgfx.c  cmd_vi_builtin.c  cmd_wget_builtin.c  idf_component.yml  main.c  my_console_io.c  my_console_io.h  ssh_app_mode.c
docs/: commands.md  elf_support.md  examples.md  lua.md
tools/: build_launcher_bin.py
